change resource type to singular
-
 
-
